@@ -1,3 +1,8 @@
+Thu Mar 26 11:48:33 CET 2009 Christian Anthon <anthon@kiku.dk>
+
+	* analysis.c, eval.c, play.c, sgf.c: make hint and cmark features work
+	together and fix save match / hint bug report by Michel.
+
 Wed Mar 25 22:30:30 CET 2009 Christian Anthon <anthon@kiku.dk>
 
 	* eval.c, play.c: sort moves according to "back" chequer as a last
